--- a/registration-servlet-jdbc-example/src/main/webapp/web.xml
+++ b/registration-servlet-jdbc-example/src/main/webapp/web.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+
+
+<welcome-file-list>
+    <welcome-file>register_employee.jsp</welcome-file>
+</welcome-file-list>
+
     <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>registerservlet.RegisterServlet</servlet-class>
